--- a/Services.html
+++ b/Services.html
@@ -94,7 +94,7 @@
               <div class="row">
                 <div class="col-4 col-xs-4 col-sm-4 col-md-4 col-lg-4">
                   <div class="text-center">
-                    <img src="images/ai.png" alt="Thumbnail Image 1">
+                    <img src="images/Ai.png" alt="Thumbnail Image 1">
                   </div>
                 </div>
                 <div class=" col-4 col-xs-4 col-sm-4 col-md-4 col-lg-4">
