--- a/Work.html
+++ b/Work.html
@@ -215,7 +215,7 @@
           </p>
         </div>
         <div class="briefing-media col-lg-8 col-12">
-          <img class="img-fluid" src="images/mla_track.png" alt="Project MLA TRACK" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="500">
+          <img class="img-fluid" src="images/mla_Track.png" alt="Project MLA TRACK" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="500">
           <a href="http://mlatrack.com/" target="_blank" data-aos="fade-left" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="500"> <button  class="ddd3 btn_width1 btn_width2 btn btn-success" type="button" name="button">Visit</button></a>
         </div>
         <div class="heading col-lg-12 col-12" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="500">
