Learn more on home page typo error solved

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             <h3>student</h3>
                             <p>Platform Tech Solutions is an initiative by the Students, for the Students and to the Students.
                                We also provide free trainings and Internships for students but the only condition is that you should be serious about Web Technology.</p>
-                            <a href="services.html#EDUCATION" class="section1 btn btn-pill btn-translucent" target="_blank">Learn More</a>
+                            <a href="Services.html#EDUCATION" class="section1 btn btn-pill btn-translucent" target="_blank">Learn More</a>
                           </div>
                         </div>
                      </div>
@@ -163,7 +163,7 @@
                           <div>
                             <p>Platform Tech Solutions is a start up company which provide WT Solutions.
                                Any company or individual who is interested to take our Services is welcomed and we can assure you for Quality, Quantity and On-Time work .</p>
-                               <a href="services.html#prservices" class="section2 btn btn-pill btn-translucent" target="_blank">Learn More</a>
+                               <a href="Services.html#prservices" class="section2 btn btn-pill btn-translucent" target="_blank">Learn More</a>
                           </div>
 
                         </div>
@@ -181,7 +181,7 @@
                         <div class="block__body" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="500">
                           <h3>NGOs</h3>
                           <p>We as a group of Web Developers believes that if our Technical skills can cause a change in the society then we should go for it. That's why we provide free Tech support to Non Governmt Organizations. </p>
-                          <a href="services.html#NGOs" class="section3 btn btn-pill btn-translucent" target="_blank">Learn More</a>
+                          <a href="Services.html#NGOs" class="section3 btn btn-pill btn-translucent" target="_blank">Learn More</a>
                         </div>
                       </div>
                     </div>
